// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToastContainer should match snapshot (alert) 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c4 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  box-shadow: 0 16px 32px 0 rgb(0 0 0 / 5%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: var(--spacing-2x);
  -webkit-transition: 0.3s ease;
  transition: 0.3s ease;
  width: 400px;
  -webkit-animation: dlEaXy 0.25s ease-out;
  animation: dlEaXy 0.25s ease-out;
  background: #CD2C23;
  color: #FFFFFF;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0 var(--spacing-1halfx);
}

.c3 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  color: #FFFFFF;
  margin: calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) 0;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  height: var(--size-1x);
  margin-top: 0.25rem;
  width: var(--size-1x);
}

<ToastContainer
  id="an id"
  message="a message"
  position="bottom-right"
  type="alert"
>
  <styled.div
    isMobile={false}
    position="bottom-right"
    role="status"
    type="alert"
  >
    <div
      className="c0"
      role="status"
      type="alert"
    >
      <Styled(Icon)
        isMobile={false}
        name="alertOctagon"
        role="img"
        size="16"
        type="alert"
      >
        <Icon
          aria-label="alert"
          className="c1"
          focusable={true}
          isMobile={false}
          name="alertOctagon"
          role="img"
          size="16"
          type="alert"
        >
          <OctagonAlert
            aria-label="alert"
            className="c1"
            color="currentColor"
            focusable={true}
            height="16"
            isMobile={false}
            role="img"
            type="alert"
            width="16"
          >
            <ForwardRef
              aria-label="alert"
              className="lucide-octagon-alert c1"
              color="currentColor"
              focusable={true}
              height="16"
              iconNode={
                [
                  [
                    "path",
                    {
                      "d": "M12 16h.01",
                      "key": "1drbdi",
                    },
                  ],
                  [
                    "path",
                    {
                      "d": "M12 8v4",
                      "key": "1got3b",
                    },
                  ],
                  [
                    "path",
                    {
                      "d": "M15.312 2a2 2 0 0 1 1.414.586l4.688 4.688A2 2 0 0 1 22 8.688v6.624a2 2 0 0 1-.586 1.414l-4.688 4.688a2 2 0 0 1-1.414.586H8.688a2 2 0 0 1-1.414-.586l-4.688-4.688A2 2 0 0 1 2 15.312V8.688a2 2 0 0 1 .586-1.414l4.688-4.688A2 2 0 0 1 8.688 2z",
                      "key": "1fd625",
                    },
                  ],
                ]
              }
              isMobile={false}
              role="img"
              type="alert"
              width="16"
            >
              <svg
                aria-label="alert"
                className="lucide lucide-octagon-alert c1"
                fill="none"
                focusable={true}
                height="16"
                isMobile={false}
                role="img"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
                type="alert"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 16h.01"
                  key="1drbdi"
                />
                <path
                  d="M12 8v4"
                  key="1got3b"
                />
                <path
                  d="M15.312 2a2 2 0 0 1 1.414.586l4.688 4.688A2 2 0 0 1 22 8.688v6.624a2 2 0 0 1-.586 1.414l-4.688 4.688a2 2 0 0 1-1.414.586H8.688a2 2 0 0 1-1.414-.586l-4.688-4.688A2 2 0 0 1 2 15.312V8.688a2 2 0 0 1 .586-1.414l4.688-4.688A2 2 0 0 1 8.688 2z"
                  key="1fd625"
                />
              </svg>
            </ForwardRef>
          </OctagonAlert>
        </Icon>
      </Styled(Icon)>
      <styled.p
        $isMobile={false}
      >
        <p
          className="c2"
        >
          a message
        </p>
      </styled.p>
      <Styled(IconButton)
        $isMobile={false}
        $type="alert"
        buttonType="tertiary"
        data-testid="dismiss"
        inverted={true}
        label="Dismiss notification"
        onClick={[Function]}
        type="button"
      >
        <IconButton
          buttonType="tertiary"
          className="c3"
          data-testid="dismiss"
          iconName="x"
          inverted={true}
          label="Dismiss notification"
          onClick={[Function]}
          type="button"
        >
          <Styled(AbstractButton)
            aria-label="Dismiss notification"
            buttonType="tertiary"
            className="c3"
            data-testid="dismiss"
            focusable={true}
            inverted={true}
            isMobile={false}
            onClick={[Function]}
            size="medium"
            type="button"
          >
            <AbstractButton
              aria-label="Dismiss notification"
              buttonType="tertiary"
              className="c4 c3"
              data-testid="dismiss"
              focusable={true}
              inverted={true}
              isMobile={false}
              onClick={[Function]}
              size="medium"
              type="button"
            >
              <styled.button
                $focusable={true}
                $isMobile={false}
                $size="medium"
                aria-label="Dismiss notification"
                buttonType="tertiary"
                className="c4 c3"
                data-testid="dismiss"
                inverted={true}
                onClick={[Function]}
                type="button"
              >
                <button
                  aria-label="Dismiss notification"
                  className="c5 c4 c3"
                  data-testid="dismiss"
                  onClick={[Function]}
                  type="button"
                >
                  <Icon
                    aria-hidden="true"
                    name="x"
                    size="16"
                  >
                    <X
                      aria-hidden="true"
                      color="currentColor"
                      focusable={false}
                      height="16"
                      width="16"
                    >
                      <ForwardRef
                        aria-hidden="true"
                        className="lucide-x"
                        color="currentColor"
                        focusable={false}
                        height="16"
                        iconNode={
                          [
                            [
                              "path",
                              {
                                "d": "M18 6 6 18",
                                "key": "1bl5f8",
                              },
                            ],
                            [
                              "path",
                              {
                                "d": "m6 6 12 12",
                                "key": "d8bk6v",
                              },
                            ],
                          ]
                        }
                        width="16"
                      >
                        <svg
                          aria-hidden="true"
                          className="lucide lucide-x"
                          fill="none"
                          focusable={false}
                          height="16"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                          strokeWidth={2}
                          viewBox="0 0 24 24"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M18 6 6 18"
                            key="1bl5f8"
                          />
                          <path
                            d="m6 6 12 12"
                            key="d8bk6v"
                          />
                        </svg>
                      </ForwardRef>
                    </X>
                  </Icon>
                </button>
              </styled.button>
            </AbstractButton>
          </Styled(AbstractButton)>
        </IconButton>
      </Styled(IconButton)>
    </div>
  </styled.div>
</ToastContainer>
`;

exports[`ToastContainer should match snapshot (discovery) 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c4 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  box-shadow: 0 16px 32px 0 rgb(0 0 0 / 5%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: var(--spacing-2x);
  -webkit-transition: 0.3s ease;
  transition: 0.3s ease;
  width: 400px;
  -webkit-animation: dlEaXy 0.25s ease-out;
  animation: dlEaXy 0.25s ease-out;
  background: #602FA0;
  color: #FFFFFF;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0 var(--spacing-1halfx);
}

.c3 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  color: #FFFFFF;
  margin: calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) 0;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  height: var(--size-1x);
  margin-top: 0.25rem;
  width: var(--size-1x);
}

<ToastContainer
  id="an id"
  message="a message"
  position="bottom-right"
  type="discovery"
>
  <styled.div
    isMobile={false}
    position="bottom-right"
    role="status"
    type="discovery"
  >
    <div
      className="c0"
      role="status"
      type="discovery"
    >
      <Styled(Icon)
        isMobile={false}
        name="lightbulb"
        role="img"
        size="16"
        type="discovery"
      >
        <Icon
          aria-label="discovery"
          className="c1"
          focusable={true}
          isMobile={false}
          name="lightbulb"
          role="img"
          size="16"
          type="discovery"
        >
          <Lightbulb
            aria-label="discovery"
            className="c1"
            color="currentColor"
            focusable={true}
            height="16"
            isMobile={false}
            role="img"
            type="discovery"
            width="16"
          >
            <ForwardRef
              aria-label="discovery"
              className="lucide-lightbulb c1"
              color="currentColor"
              focusable={true}
              height="16"
              iconNode={
                [
                  [
                    "path",
                    {
                      "d": "M15 14c.2-1 .7-1.7 1.5-2.5 1-.9 1.5-2.2 1.5-3.5A6 6 0 0 0 6 8c0 1 .2 2.2 1.5 3.5.7.7 1.3 1.5 1.5 2.5",
                      "key": "1gvzjb",
                    },
                  ],
                  [
                    "path",
                    {
                      "d": "M9 18h6",
                      "key": "x1upvd",
                    },
                  ],
                  [
                    "path",
                    {
                      "d": "M10 22h4",
                      "key": "ceow96",
                    },
                  ],
                ]
              }
              isMobile={false}
              role="img"
              type="discovery"
              width="16"
            >
              <svg
                aria-label="discovery"
                className="lucide lucide-lightbulb c1"
                fill="none"
                focusable={true}
                height="16"
                isMobile={false}
                role="img"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
                type="discovery"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 14c.2-1 .7-1.7 1.5-2.5 1-.9 1.5-2.2 1.5-3.5A6 6 0 0 0 6 8c0 1 .2 2.2 1.5 3.5.7.7 1.3 1.5 1.5 2.5"
                  key="1gvzjb"
                />
                <path
                  d="M9 18h6"
                  key="x1upvd"
                />
                <path
                  d="M10 22h4"
                  key="ceow96"
                />
              </svg>
            </ForwardRef>
          </Lightbulb>
        </Icon>
      </Styled(Icon)>
      <styled.p
        $isMobile={false}
      >
        <p
          className="c2"
        >
          a message
        </p>
      </styled.p>
      <Styled(IconButton)
        $isMobile={false}
        $type="discovery"
        buttonType="tertiary"
        data-testid="dismiss"
        inverted={true}
        label="Dismiss notification"
        onClick={[Function]}
        type="button"
      >
        <IconButton
          buttonType="tertiary"
          className="c3"
          data-testid="dismiss"
          iconName="x"
          inverted={true}
          label="Dismiss notification"
          onClick={[Function]}
          type="button"
        >
          <Styled(AbstractButton)
            aria-label="Dismiss notification"
            buttonType="tertiary"
            className="c3"
            data-testid="dismiss"
            focusable={true}
            inverted={true}
            isMobile={false}
            onClick={[Function]}
            size="medium"
            type="button"
          >
            <AbstractButton
              aria-label="Dismiss notification"
              buttonType="tertiary"
              className="c4 c3"
              data-testid="dismiss"
              focusable={true}
              inverted={true}
              isMobile={false}
              onClick={[Function]}
              size="medium"
              type="button"
            >
              <styled.button
                $focusable={true}
                $isMobile={false}
                $size="medium"
                aria-label="Dismiss notification"
                buttonType="tertiary"
                className="c4 c3"
                data-testid="dismiss"
                inverted={true}
                onClick={[Function]}
                type="button"
              >
                <button
                  aria-label="Dismiss notification"
                  className="c5 c4 c3"
                  data-testid="dismiss"
                  onClick={[Function]}
                  type="button"
                >
                  <Icon
                    aria-hidden="true"
                    name="x"
                    size="16"
                  >
                    <X
                      aria-hidden="true"
                      color="currentColor"
                      focusable={false}
                      height="16"
                      width="16"
                    >
                      <ForwardRef
                        aria-hidden="true"
                        className="lucide-x"
                        color="currentColor"
                        focusable={false}
                        height="16"
                        iconNode={
                          [
                            [
                              "path",
                              {
                                "d": "M18 6 6 18",
                                "key": "1bl5f8",
                              },
                            ],
                            [
                              "path",
                              {
                                "d": "m6 6 12 12",
                                "key": "d8bk6v",
                              },
                            ],
                          ]
                        }
                        width="16"
                      >
                        <svg
                          aria-hidden="true"
                          className="lucide lucide-x"
                          fill="none"
                          focusable={false}
                          height="16"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                          strokeWidth={2}
                          viewBox="0 0 24 24"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M18 6 6 18"
                            key="1bl5f8"
                          />
                          <path
                            d="m6 6 12 12"
                            key="d8bk6v"
                          />
                        </svg>
                      </ForwardRef>
                    </X>
                  </Icon>
                </button>
              </styled.button>
            </AbstractButton>
          </Styled(AbstractButton)>
        </IconButton>
      </Styled(IconButton)>
    </div>
  </styled.div>
</ToastContainer>
`;

exports[`ToastContainer should match snapshot (neutral) 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c4 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  box-shadow: 0 16px 32px 0 rgb(0 0 0 / 5%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: var(--spacing-2x);
  -webkit-transition: 0.3s ease;
  transition: 0.3s ease;
  width: 400px;
  -webkit-animation: dlEaXy 0.25s ease-out;
  animation: dlEaXy 0.25s ease-out;
  background: #60666E;
  color: #FFFFFF;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0 var(--spacing-1halfx);
}

.c3 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  color: #FFFFFF;
  margin: calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) 0;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  height: var(--size-1x);
  margin-top: 0.25rem;
  width: var(--size-1x);
}

<ToastContainer
  id="an id"
  message="a message"
  position="bottom-right"
  type="neutral"
>
  <styled.div
    isMobile={false}
    position="bottom-right"
    role="status"
    type="neutral"
  >
    <div
      className="c0"
      role="status"
      type="neutral"
    >
      <Styled(Icon)
        isMobile={false}
        name="info"
        role="img"
        size="16"
        type="neutral"
      >
        <Icon
          aria-label="information"
          className="c1"
          focusable={true}
          isMobile={false}
          name="info"
          role="img"
          size="16"
          type="neutral"
        >
          <Info
            aria-label="information"
            className="c1"
            color="currentColor"
            focusable={true}
            height="16"
            isMobile={false}
            role="img"
            type="neutral"
            width="16"
          >
            <ForwardRef
              aria-label="information"
              className="lucide-info c1"
              color="currentColor"
              focusable={true}
              height="16"
              iconNode={
                [
                  [
                    "circle",
                    {
                      "cx": "12",
                      "cy": "12",
                      "key": "1mglay",
                      "r": "10",
                    },
                  ],
                  [
                    "path",
                    {
                      "d": "M12 16v-4",
                      "key": "1dtifu",
                    },
                  ],
                  [
                    "path",
                    {
                      "d": "M12 8h.01",
                      "key": "e9boi3",
                    },
                  ],
                ]
              }
              isMobile={false}
              role="img"
              type="neutral"
              width="16"
            >
              <svg
                aria-label="information"
                className="lucide lucide-info c1"
                fill="none"
                focusable={true}
                height="16"
                isMobile={false}
                role="img"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
                type="neutral"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  key="1mglay"
                  r="10"
                />
                <path
                  d="M12 16v-4"
                  key="1dtifu"
                />
                <path
                  d="M12 8h.01"
                  key="e9boi3"
                />
              </svg>
            </ForwardRef>
          </Info>
        </Icon>
      </Styled(Icon)>
      <styled.p
        $isMobile={false}
      >
        <p
          className="c2"
        >
          a message
        </p>
      </styled.p>
      <Styled(IconButton)
        $isMobile={false}
        $type="neutral"
        buttonType="tertiary"
        data-testid="dismiss"
        inverted={true}
        label="Dismiss notification"
        onClick={[Function]}
        type="button"
      >
        <IconButton
          buttonType="tertiary"
          className="c3"
          data-testid="dismiss"
          iconName="x"
          inverted={true}
          label="Dismiss notification"
          onClick={[Function]}
          type="button"
        >
          <Styled(AbstractButton)
            aria-label="Dismiss notification"
            buttonType="tertiary"
            className="c3"
            data-testid="dismiss"
            focusable={true}
            inverted={true}
            isMobile={false}
            onClick={[Function]}
            size="medium"
            type="button"
          >
            <AbstractButton
              aria-label="Dismiss notification"
              buttonType="tertiary"
              className="c4 c3"
              data-testid="dismiss"
              focusable={true}
              inverted={true}
              isMobile={false}
              onClick={[Function]}
              size="medium"
              type="button"
            >
              <styled.button
                $focusable={true}
                $isMobile={false}
                $size="medium"
                aria-label="Dismiss notification"
                buttonType="tertiary"
                className="c4 c3"
                data-testid="dismiss"
                inverted={true}
                onClick={[Function]}
                type="button"
              >
                <button
                  aria-label="Dismiss notification"
                  className="c5 c4 c3"
                  data-testid="dismiss"
                  onClick={[Function]}
                  type="button"
                >
                  <Icon
                    aria-hidden="true"
                    name="x"
                    size="16"
                  >
                    <X
                      aria-hidden="true"
                      color="currentColor"
                      focusable={false}
                      height="16"
                      width="16"
                    >
                      <ForwardRef
                        aria-hidden="true"
                        className="lucide-x"
                        color="currentColor"
                        focusable={false}
                        height="16"
                        iconNode={
                          [
                            [
                              "path",
                              {
                                "d": "M18 6 6 18",
                                "key": "1bl5f8",
                              },
                            ],
                            [
                              "path",
                              {
                                "d": "m6 6 12 12",
                                "key": "d8bk6v",
                              },
                            ],
                          ]
                        }
                        width="16"
                      >
                        <svg
                          aria-hidden="true"
                          className="lucide lucide-x"
                          fill="none"
                          focusable={false}
                          height="16"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                          strokeWidth={2}
                          viewBox="0 0 24 24"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M18 6 6 18"
                            key="1bl5f8"
                          />
                          <path
                            d="m6 6 12 12"
                            key="d8bk6v"
                          />
                        </svg>
                      </ForwardRef>
                    </X>
                  </Icon>
                </button>
              </styled.button>
            </AbstractButton>
          </Styled(AbstractButton)>
        </IconButton>
      </Styled(IconButton)>
    </div>
  </styled.div>
</ToastContainer>
`;

exports[`ToastContainer should match snapshot (success) 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c4 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  box-shadow: 0 16px 32px 0 rgb(0 0 0 / 5%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: var(--spacing-2x);
  -webkit-transition: 0.3s ease;
  transition: 0.3s ease;
  width: 400px;
  -webkit-animation: dlEaXy 0.25s ease-out;
  animation: dlEaXy 0.25s ease-out;
  background: #008533;
  color: #FFFFFF;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0 var(--spacing-1halfx);
}

.c3 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  color: #FFFFFF;
  margin: calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) 0;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  height: var(--size-1x);
  margin-top: 0.25rem;
  width: var(--size-1x);
}

<ToastContainer
  id="an id"
  message="a message"
  position="bottom-right"
  type="success"
>
  <styled.div
    isMobile={false}
    position="bottom-right"
    role="status"
    type="success"
  >
    <div
      className="c0"
      role="status"
      type="success"
    >
      <Styled(Icon)
        isMobile={false}
        name="check"
        role="img"
        size="16"
        type="success"
      >
        <Icon
          aria-label="success"
          className="c1"
          focusable={true}
          isMobile={false}
          name="check"
          role="img"
          size="16"
          type="success"
        >
          <Check
            aria-label="success"
            className="c1"
            color="currentColor"
            focusable={true}
            height="16"
            isMobile={false}
            role="img"
            type="success"
            width="16"
          >
            <ForwardRef
              aria-label="success"
              className="lucide-check c1"
              color="currentColor"
              focusable={true}
              height="16"
              iconNode={
                [
                  [
                    "path",
                    {
                      "d": "M20 6 9 17l-5-5",
                      "key": "1gmf2c",
                    },
                  ],
                ]
              }
              isMobile={false}
              role="img"
              type="success"
              width="16"
            >
              <svg
                aria-label="success"
                className="lucide lucide-check c1"
                fill="none"
                focusable={true}
                height="16"
                isMobile={false}
                role="img"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
                type="success"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                  key="1gmf2c"
                />
              </svg>
            </ForwardRef>
          </Check>
        </Icon>
      </Styled(Icon)>
      <styled.p
        $isMobile={false}
      >
        <p
          className="c2"
        >
          a message
        </p>
      </styled.p>
      <Styled(IconButton)
        $isMobile={false}
        $type="success"
        buttonType="tertiary"
        data-testid="dismiss"
        inverted={true}
        label="Dismiss notification"
        onClick={[Function]}
        type="button"
      >
        <IconButton
          buttonType="tertiary"
          className="c3"
          data-testid="dismiss"
          iconName="x"
          inverted={true}
          label="Dismiss notification"
          onClick={[Function]}
          type="button"
        >
          <Styled(AbstractButton)
            aria-label="Dismiss notification"
            buttonType="tertiary"
            className="c3"
            data-testid="dismiss"
            focusable={true}
            inverted={true}
            isMobile={false}
            onClick={[Function]}
            size="medium"
            type="button"
          >
            <AbstractButton
              aria-label="Dismiss notification"
              buttonType="tertiary"
              className="c4 c3"
              data-testid="dismiss"
              focusable={true}
              inverted={true}
              isMobile={false}
              onClick={[Function]}
              size="medium"
              type="button"
            >
              <styled.button
                $focusable={true}
                $isMobile={false}
                $size="medium"
                aria-label="Dismiss notification"
                buttonType="tertiary"
                className="c4 c3"
                data-testid="dismiss"
                inverted={true}
                onClick={[Function]}
                type="button"
              >
                <button
                  aria-label="Dismiss notification"
                  className="c5 c4 c3"
                  data-testid="dismiss"
                  onClick={[Function]}
                  type="button"
                >
                  <Icon
                    aria-hidden="true"
                    name="x"
                    size="16"
                  >
                    <X
                      aria-hidden="true"
                      color="currentColor"
                      focusable={false}
                      height="16"
                      width="16"
                    >
                      <ForwardRef
                        aria-hidden="true"
                        className="lucide-x"
                        color="currentColor"
                        focusable={false}
                        height="16"
                        iconNode={
                          [
                            [
                              "path",
                              {
                                "d": "M18 6 6 18",
                                "key": "1bl5f8",
                              },
                            ],
                            [
                              "path",
                              {
                                "d": "m6 6 12 12",
                                "key": "d8bk6v",
                              },
                            ],
                          ]
                        }
                        width="16"
                      >
                        <svg
                          aria-hidden="true"
                          className="lucide lucide-x"
                          fill="none"
                          focusable={false}
                          height="16"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                          strokeWidth={2}
                          viewBox="0 0 24 24"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M18 6 6 18"
                            key="1bl5f8"
                          />
                          <path
                            d="m6 6 12 12"
                            key="d8bk6v"
                          />
                        </svg>
                      </ForwardRef>
                    </X>
                  </Icon>
                </button>
              </styled.button>
            </AbstractButton>
          </Styled(AbstractButton)>
        </IconButton>
      </Styled(IconButton)>
    </div>
  </styled.div>
</ToastContainer>
`;

exports[`ToastContainer should match snapshot (warning) 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c4 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c4[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  box-shadow: 0 16px 32px 0 rgb(0 0 0 / 5%);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: var(--spacing-2x);
  -webkit-transition: 0.3s ease;
  transition: 0.3s ease;
  width: 400px;
  -webkit-animation: dlEaXy 0.25s ease-out;
  animation: dlEaXy 0.25s ease-out;
  background: #F5A200;
  color: #1B1C1E;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0 var(--spacing-1halfx);
}

.c3 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  color: #1B1C1E;
  margin: calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) calc(-1 * var(--spacing-half)) 0;
}

.c1 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  height: var(--size-1x);
  margin-top: 0.25rem;
  width: var(--size-1x);
}

<ToastContainer
  id="an id"
  message="a message"
  position="bottom-right"
  type="warning"
>
  <styled.div
    isMobile={false}
    position="bottom-right"
    role="status"
    type="warning"
  >
    <div
      className="c0"
      role="status"
      type="warning"
    >
      <Styled(Icon)
        isMobile={false}
        name="alertTriangle"
        role="img"
        size="16"
        type="warning"
      >
        <Icon
          aria-label="warning"
          className="c1"
          focusable={true}
          isMobile={false}
          name="alertTriangle"
          role="img"
          size="16"
          type="warning"
        >
          <TriangleAlert
            aria-label="warning"
            className="c1"
            color="currentColor"
            focusable={true}
            height="16"
            isMobile={false}
            role="img"
            type="warning"
            width="16"
          >
            <ForwardRef
              aria-label="warning"
              className="lucide-triangle-alert c1"
              color="currentColor"
              focusable={true}
              height="16"
              iconNode={
                [
                  [
                    "path",
                    {
                      "d": "m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3",
                      "key": "wmoenq",
                    },
                  ],
                  [
                    "path",
                    {
                      "d": "M12 9v4",
                      "key": "juzpu7",
                    },
                  ],
                  [
                    "path",
                    {
                      "d": "M12 17h.01",
                      "key": "p32p05",
                    },
                  ],
                ]
              }
              isMobile={false}
              role="img"
              type="warning"
              width="16"
            >
              <svg
                aria-label="warning"
                className="lucide lucide-triangle-alert c1"
                fill="none"
                focusable={true}
                height="16"
                isMobile={false}
                role="img"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
                type="warning"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                  key="wmoenq"
                />
                <path
                  d="M12 9v4"
                  key="juzpu7"
                />
                <path
                  d="M12 17h.01"
                  key="p32p05"
                />
              </svg>
            </ForwardRef>
          </TriangleAlert>
        </Icon>
      </Styled(Icon)>
      <styled.p
        $isMobile={false}
      >
        <p
          className="c2"
        >
          a message
        </p>
      </styled.p>
      <Styled(IconButton)
        $isMobile={false}
        $type="warning"
        buttonType="tertiary"
        data-testid="dismiss"
        inverted={false}
        label="Dismiss notification"
        onClick={[Function]}
        type="button"
      >
        <IconButton
          buttonType="tertiary"
          className="c3"
          data-testid="dismiss"
          iconName="x"
          inverted={true}
          label="Dismiss notification"
          onClick={[Function]}
          type="button"
        >
          <Styled(AbstractButton)
            aria-label="Dismiss notification"
            buttonType="tertiary"
            className="c3"
            data-testid="dismiss"
            focusable={true}
            inverted={true}
            isMobile={false}
            onClick={[Function]}
            size="medium"
            type="button"
          >
            <AbstractButton
              aria-label="Dismiss notification"
              buttonType="tertiary"
              className="c4 c3"
              data-testid="dismiss"
              focusable={true}
              inverted={true}
              isMobile={false}
              onClick={[Function]}
              size="medium"
              type="button"
            >
              <styled.button
                $focusable={true}
                $isMobile={false}
                $size="medium"
                aria-label="Dismiss notification"
                buttonType="tertiary"
                className="c4 c3"
                data-testid="dismiss"
                inverted={true}
                onClick={[Function]}
                type="button"
              >
                <button
                  aria-label="Dismiss notification"
                  className="c5 c4 c3"
                  data-testid="dismiss"
                  onClick={[Function]}
                  type="button"
                >
                  <Icon
                    aria-hidden="true"
                    name="x"
                    size="16"
                  >
                    <X
                      aria-hidden="true"
                      color="currentColor"
                      focusable={false}
                      height="16"
                      width="16"
                    >
                      <ForwardRef
                        aria-hidden="true"
                        className="lucide-x"
                        color="currentColor"
                        focusable={false}
                        height="16"
                        iconNode={
                          [
                            [
                              "path",
                              {
                                "d": "M18 6 6 18",
                                "key": "1bl5f8",
                              },
                            ],
                            [
                              "path",
                              {
                                "d": "m6 6 12 12",
                                "key": "d8bk6v",
                              },
                            ],
                          ]
                        }
                        width="16"
                      >
                        <svg
                          aria-hidden="true"
                          className="lucide lucide-x"
                          fill="none"
                          focusable={false}
                          height="16"
                          stroke="currentColor"
                          strokeLinecap="round"
                          strokeLinejoin="round"
                          strokeWidth={2}
                          viewBox="0 0 24 24"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M18 6 6 18"
                            key="1bl5f8"
                          />
                          <path
                            d="m6 6 12 12"
                            key="d8bk6v"
                          />
                        </svg>
                      </ForwardRef>
                    </X>
                  </Icon>
                </button>
              </styled.button>
            </AbstractButton>
          </Styled(AbstractButton)>
        </IconButton>
      </Styled(IconButton)>
    </div>
  </styled.div>
</ToastContainer>
`;
